--- a/source/HotelBooking/Web.config
+++ b/source/HotelBooking/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-HotelBooking-20160721122013.mdf;Initial Catalog=aspnet-HotelBooking-20160721122013;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="Hotel_Booking" connectionString="Data Source=IDCSQL3.znetlive.com,1234;Initial Catalog=Hotel_Booking;Persist Security Info=True;User ID=Hotel_Booking;Password=Hotel_Booking@123" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -87,4 +87,11 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.web.extensions>
+    <!--<scripting>
+      <webServices>
+        <jsonSerialization maxJsonLength="50000000"/>
+      </webServices>
+    </scripting>-->
+  </system.web.extensions>
 </configuration>
