--- a/source/HotelBooking/packages.config
+++ b/source/HotelBooking/packages.config
@@ -2,6 +2,10 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
+  <package id="Dapper" version="1.50.1" targetFramework="net45" />
+  <package id="Dapper.Contrib" version="1.43" targetFramework="net45" />
+  <package id="Dapper.SimpleCRUD" version="1.12.0" targetFramework="net45" />
+  <package id="Dapper-Async" version="1.03" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
