--- a/source/HotelBooking/HotelBooking.csproj
+++ b/source/HotelBooking/HotelBooking.csproj
@@ -207,6 +207,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\HotelResult.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\UserAuthenticateModel.cs" />
